repr-trait/test/packed_fail.rs
use repr_trait::Packed;

#[derive(Packed)]
struct NotPacked {
}

fn main() {}
